# galaxies

./: .gitmodules  README.md  README.rst  galaxies.py  galaxytools.py  rotcurve_interp.py  rotcurve_tools.py  setup.cfg  setup.py
docs/: index.rst
docs/galaxies/: index.rst
galaxies/: __init__.py  galaxies.py  regions.py  setup_package.py
licenses/: LICENSE.rst
