
[metadata]
name = galaxies
description = Galaxy object
long_description = Galaxy object linked to databases of existing properties.
author = Erik Rosolowsky
author_email = rosolowsky@ualberta.ca
license = BSD
url = http://low-sky.github.io/
edit_on_github = True
github_project = low-sky/galaxies

[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    regions
    shapely
    scipy
    numpy

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
docs =
    sphinx-astropy
    matplotlib
novis =
    zarr
    fsspec
    distributed
    pvextractor
    regions>=0.3
    reproject
    scipy
all =
    zarr
    fsspec
    distributed
    aplpy
    glue-core[qt]
    matplotlib
    pvextractor
    regions>=0.3
    reproject
    scipy
    yt ; python_version<'3.8'

[options.package_data]
spectral_cube.tests =
       data/*
       data/*/*

spectral_cube.io.tests = data/*/*

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings
doctest_subpackage_requires =
    spectral_cube/vis*.py = aplpy


[coverage:run]
omit =
  spectral-cube/__init__*
  spectral-cube/conftest.py
  spectral-cube/*setup*
  spectral-cube/*/tests/*
  spectral-cube/tests/test_*
  spectral-cube/extern/*
  spectral-cube/utils/compat/*
  spectral-cube/version*
  spectral-cube/wcs/docstrings*
  spectral-cube/_erfa/*
  */spectral-cube/__init__*
  */spectral-cube/conftest.py
  */spectral-cube/*setup*
  */spectral-cube/*/tests/*
  */spectral-cube/tests/test_*
  */spectral-cube/extern/*
  */spectral-cube/utils/compat/*
  */spectral-cube/version*
  */spectral-cube/wcs/docstrings*
  */spectral-cube/_erfa/*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
